tests/src/snapshots/fe_compiler_tests__compile_errors__bad_map5.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `map` key must be a primitive type
  ┌─ [snippet]:3:10
  │
3 │   x: map<map<u8, u8>, address>
  │          ^^^^^^^^^^^ this can't be used as a map key


