tests/src/snapshots/fe_compiler_tests__compile_errors__bad_tuple_attr1.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: No field `iteo0` exists on this tuple
  ┌─ fixtures/compile_errors/bad_tuple_attr1.fe:6:27
  │
6 │         self.my_sto_tuple.iteo0
  │                           ^^^^^ undefined field
  │
  = Note: Tuple values are accessed via `itemN` properties such as `item0` or `item1`


