tests/src/snapshots/fe_compiler_tests__compile_errors__bad_tuple_attr2.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---


UndefinedValue on line 6
[31mself.my_sto_tuple.m[0m
